# xforth

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYING  Cargo.toml  LICENSE  NOTES.md  README.md  build.sh  run.sh
assets/: style.css
examples/: basic.rs
src/: fund.rs  gui.rs  init.rs  lib.rs  main.rs  test.rs  utils.rs
tests/: test.rs
