[package]
name = "xforth"
version = "0.1.0"
edition = "2024"
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]

###############################################################################
description = ""Utils for working with x402.""
documentation = "https://docs.rs/xforth"
homepage = "https://github.com/cryptopatrick/xforth"
repository = "https://github.com/cryptopatrick/xforth"
readme = "README.md"
keywords = ["<KEYWORD1>", "<KEYWORD2>" ]
license = "MIT"
autotests = false

###############################################################################
[lib]
name = "xforth"
path = "src/lib.rs"

[[test]]
name = "tests"
path = "tests/test.rs"

###############################################################################
[dependencies]
