[package]
name = "xforth"
version = "0.1.0"
edition = "2021"
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]

###############################################################################
description = "CLI tool for bootstrapping x402 Solana projects in under 90 seconds"
documentation = "https://docs.rs/xforth"
homepage = "https://github.com/cryptopatrick/xforth"
repository = "https://github.com/cryptopatrick/xforth"
readme = "README.md"
keywords = ["solana", "x402", "cli", "blockchain", "devnet"]
license = "MIT"
autotests = false

###############################################################################
[[bin]]
name = "xforth"
path = "src/main.rs"

[[bin]]
name = "xforth-gui"
path = "src/gui.rs"

[[test]]
name = "tests"
path = "tests/test.rs"

###############################################################################
[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
solana-sdk = "3.0"
solana-client = "3.0.10"
solana-program = "3.0"
solana-commitment-config = "3.0"
solana-rpc-client-api = "3.0"
solana-transaction-status = "3.0"
solana-system-interface = { version = "3.0", features = ["bincode"] }
spl-token = { version = "9.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "10.0", features = ["no-entrypoint"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
anyhow = "1.0.82"
dotenvy = "0.15.7"
bs58 = "0.5.1"
colored = "2.1.0"
dioxus = { version = "0.7.1", optional = true, features = ["desktop"] }
dioxus-desktop = { version = "0.7.0", optional = true }

[features]
default = []
gui = ["dioxus", "dioxus-desktop"]